--- a/scss/style.css
+++ b/scss/style.css
@@ -425,6 +425,11 @@ p {
   font-size: 1.8rem;
   line-height: 1.8;
 }
+@media only screen and (max-width: 500px) {
+  p {
+    line-height: 2;
+  }
+}
 
 header.sm-container {
   margin-block: 4.4rem;
@@ -436,7 +441,7 @@ header.sm-container {
 }
 @media only screen and (max-width: 500px) {
   header.sm-container img {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
   }
 }
@@ -491,7 +496,7 @@ header.sm-container {
 @media only screen and (max-width: 500px) {
   .citizen-adv-sec .grid-box {
     grid-template-columns: 1fr;
-    row-gap: 4rem;
+    row-gap: 0;
     overflow: hidden;
   }
 }
@@ -507,6 +512,7 @@ header.sm-container {
     padding: 0;
     border: none;
     border-bottom: 1px solid #c0c0c0;
+    padding-block: 2rem;
   }
 }
 .citizen-adv-sec .grid-box div:nth-child(even) {
@@ -517,6 +523,7 @@ header.sm-container {
     padding: 0;
     border: none;
     border-bottom: 1px solid #c0c0c0;
+    padding-block: 2rem;
   }
 }
 .citizen-adv-sec .grid-box div span {
@@ -536,6 +543,11 @@ header.sm-container {
   text-align: center;
   padding-block: 1.8rem;
 }
+@media only screen and (max-width: 500px) {
+  .home-loan-contaier .heading02 {
+    line-height: 1.8;
+  }
+}
 .home-loan-contaier .text-container {
   background-color: #ebf7f5;
   padding: 3rem 6.5rem;
@@ -543,6 +555,11 @@ header.sm-container {
 @media only screen and (max-width: 768px) {
   .home-loan-contaier .text-container {
     padding: 3rem 4.5rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .home-loan-contaier .text-container {
+    padding: 2.5rem;
   }
 }
 
@@ -561,10 +578,15 @@ header.sm-container {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   .testimonial-section .grid-box {
     gap: 6rem;
     grid-template-columns: 1fr;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .testimonial-section .grid-box {
+    width: 50%;
   }
 }
 .testimonial-section .grid-box .testi-box {
